--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,22 @@
+#CD GitHub Actions Workflow
+name: Deploy
 
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploy-devel:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          script: |
+            cd /home/dev/truco2-db/
+            git pull origin main
+            docker compose up -d --build
