--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     restart: unless-stopped
     container_name: truco2-postgres
     environment:
-      POSTGRES_PASSWORD: truco123
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./psql:/var/lib/postgresql/data
     networks:
       - appnet
     ports:
-      - "5416:5432"
+      - "${DB_PORT}:5432"
 
   pgadmin:
     image: dpage/pgadmin4
@@ -20,7 +20,7 @@ services:
     container_name: truco2-pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: truco2.user@ufam.com.br
-      PGADMIN_DEFAULT_PASSWORD: truco123
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     volumes:
       - ./pgadmin:/var/lib/pgadmin
     depends_on:
@@ -28,7 +28,7 @@ services:
     networks:
       - appnet
     ports:
-      - "16516:80"
+      - "${PGADMIN_PORT}:80"
 
 networks:
   appnet:
